# linux-wifi-hotspot

./: .all-contributorsrc  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.cmake  README.md  a.md  snapcraft.yaml
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: blank.yml  build.yml  codeql-analysis.yml
debian/: .gitignore  changelog  control  copyright  linux-wifi-hotspot.install  rules
docs/: notes-hotspotd.md  web-service.md
services/hotspotd/: Cargo.toml  README.md  hotspotd.env.example  hotspotd.service
services/hotspotd/assets/: create_ap.conf
services/hotspotd/src/: api.rs  auth.rs  config.rs  hotspot.rs  main.rs  nm.rs  services.rs  state.rs
src/: CMakeLists.txt  Makefile  makefile  makefile.old
src/desktop/: wifihotspot.desktop
src/scripts/: LICENSE  Makefile  README.md  bash_completion  create_ap  create_ap.conf  create_ap.service  sudors_edit.sh  wifihotspot.desktop  wihotspot
src/scripts/policies/: polkit.policy  polkit.rules
src/ui/: about_ui.c  about_ui.h  h_prop.c  h_prop.h  main.c  qr_ui.c  qr_ui.h  qrgen.cpp  qrgen.h  read_config.cpp  read_config.h  ui.c  ui.h  util.c  util.h
src/ui/glade/: about.glade  main.glade  main.ui  qr.glade  style.css  wifih.gresource.xml  wifih.ui
test/: Makefile  test_util.c
util/debian/: Dockerfile  README.md
webui/: .env  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
webui/src/: App.svelte  app.css  main.ts
webui/src/lib/: api.ts
webui/src/routes/: Dashboard.svelte  Login.svelte  MockDashboard.svelte
