[package]
name = "hotspotd"
version = "0.1.0"
edition = "2021"
description = "Privileged helper daemon for linux-wifi-hotspot web management"
authors = ["linux-wifi-hotspot contributors"]
license = "BSD-2-Clause"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "process"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
which = "6"
zbus = { version = "4", default-features = false, features = ["tokio"] }
hyper-util = { version = "0.1", features = ["server", "service", "http1", "tokio"] }
